# lilvlib

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  azure-pipelines.yml  build-python3-lilv-mac.sh  build-python3-lilv.sh  lv2-plugin-is-project.patch  lv2_validate_mod  pyproject.toml  serd-fix-unitialized-read-error.patch  setup.py  sord_validate_mod  test.py
.github/workflows/: build.yml  pylint.yml
builds/: README  lilv.py  sord_validate
docker/: Dockerfile  trusty_python34.docker
lilvlib/: __init__.py  lilvlib.py
python3-lilv-pkg/debian/: changelog  control  install  rules
python3-lilv-pkg/debian/patches/: fix-link.patch  sord-crash-fix.patch
scripts/: build.sh  test.sh
